[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/font/Godot-Fontpack-d244bf6170b399a6d4d26a0d906058ddf2dafdf1/fonts/xolonium/Xolonium.tres" type="DynamicFont" id=1]
[ext_resource path="res://Menu/Settings_menu.gd" type="Script" id=2]

[node name="SettingsMenu" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -345.0
margin_top = -227.0
margin_right = 345.0
margin_bottom = 227.0
rect_min_size = Vector2( 690, 454 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.176471, 0.168627, 0.168627, 0.772549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsTabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video" type="Tabs" parent="SettingsTabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
tab_align = 0
tab_close_display_policy = 1

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Video"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoSettings" type="GridContainer" parent="SettingsTabs/Video/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 657.0
margin_bottom = 393.0
custom_constants/vseparation = 3
columns = 2

[node name="DisplayMode" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
margin_top = 3.0
margin_right = 142.0
margin_bottom = 28.0
custom_fonts/font = ExtResource( 1 )
text = "Display Mode"

[node name="DisplayOptionsBtn" type="OptionButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
margin_left = 492.0
margin_right = 632.0
margin_bottom = 31.0
size_flags_horizontal = 10
custom_fonts/font = ExtResource( 1 )
text = "Windowed"
flat = true
align = 1
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null ]
selected = 0

[node name="Vsync" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
margin_top = 41.0
margin_right = 142.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 1 )
text = "Vsync"

[node name="VsyncBtn" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
margin_left = 556.0
margin_top = 34.0
margin_right = 632.0
margin_bottom = 74.0
focus_mode = 1
size_flags_horizontal = 10
action_mode = 0
enabled_focus_mode = 1
flat = true
align = 1

[node name="DisplayFps" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
margin_top = 84.0
margin_right = 142.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 1 )
text = "DisplayFps	"

[node name="DisplayFpsBtn" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
margin_left = 556.0
margin_top = 77.0
margin_right = 632.0
margin_bottom = 117.0
focus_mode = 1
size_flags_horizontal = 10
action_mode = 0
enabled_focus_mode = 1
flat = true
align = 1

[node name="MaxFps" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
margin_top = 120.0
margin_right = 142.0
margin_bottom = 145.0
custom_fonts/font = ExtResource( 1 )
text = "MaxFps"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
margin_left = 283.0
margin_top = 120.0
margin_right = 632.0
margin_bottom = 145.0
size_flags_horizontal = 10

[node name="MaxFpsVal" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings/HBoxContainer"]
margin_right = 45.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 1 )
text = "Max"

[node name="MaxFpsSlider" type="HSlider" parent="SettingsTabs/Video/MarginContainer/VideoSettings/HBoxContainer"]
margin_left = 49.0
margin_right = 349.0
margin_bottom = 25.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 30.0
max_value = 500.0
value = 500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bloom" type="Label" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
margin_top = 155.0
margin_right = 142.0
margin_bottom = 180.0
custom_fonts/font = ExtResource( 1 )
text = "Bloom"

[node name="BloomBtn" type="CheckButton" parent="SettingsTabs/Video/MarginContainer/VideoSettings"]
margin_left = 556.0
margin_top = 148.0
margin_right = 632.0
margin_bottom = 188.0
focus_mode = 1
size_flags_horizontal = 10
action_mode = 0
enabled_focus_mode = 1
flat = true
align = 1

[node name="Audio" type="Tabs" parent="SettingsTabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="MarginContainer" type="MarginContainer" parent="SettingsTabs/Audio"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioSettings" type="GridContainer" parent="SettingsTabs/Audio/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 657.0
margin_bottom = 393.0
custom_constants/vseparation = 15
columns = 2

[node name="Vol" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
margin_right = 146.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 1 )
text = "Volume"

[node name="VolSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
margin_left = 332.0
margin_right = 632.0
margin_bottom = 25.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVol" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
margin_top = 40.0
margin_right = 146.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 1 )
text = "Music Volume"

[node name="MusicVolSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
margin_left = 332.0
margin_top = 40.0
margin_right = 632.0
margin_bottom = 65.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SfxVol" type="Label" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
margin_top = 80.0
margin_right = 146.0
margin_bottom = 105.0
custom_fonts/font = ExtResource( 1 )
text = "SFX Volume"

[node name="SfxVolSlider" type="HSlider" parent="SettingsTabs/Audio/MarginContainer/AudioSettings"]
margin_left = 332.0
margin_top = 80.0
margin_right = 632.0
margin_bottom = 105.0
rect_min_size = Vector2( 300, 0 )
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = -50.0
max_value = 0.0
value = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="SettingsTabs/Video/MarginContainer/VideoSettings/DisplayOptionsBtn" to="." method="_on_DisplayOptionsBtn_item_selected"]
[connection signal="toggled" from="SettingsTabs/Video/MarginContainer/VideoSettings/VsyncBtn" to="." method="_on_VsyncBtn_toggled"]
[connection signal="toggled" from="SettingsTabs/Video/MarginContainer/VideoSettings/DisplayFpsBtn" to="." method="_on_DisplayFpsBtn_toggled"]
[connection signal="value_changed" from="SettingsTabs/Video/MarginContainer/VideoSettings/HBoxContainer/MaxFpsSlider" to="." method="_on_MaxFpsSlider_value_changed"]
[connection signal="toggled" from="SettingsTabs/Video/MarginContainer/VideoSettings/BloomBtn" to="." method="_on_BloomBtn_toggled"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/VolSlider" to="." method="_on_VolSlider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/MusicVolSlider" to="." method="_on_MusicVolSlider_value_changed"]
[connection signal="value_changed" from="SettingsTabs/Audio/MarginContainer/AudioSettings/SfxVolSlider" to="." method="_on_SfxVolSlider_value_changed"]
